--- a/po/io.po
+++ b/po/io.po
@@ -7,14 +7,16 @@ msgid ""
 msgstr ""
 "Project-Id-Version: duplicity 0.5.03\n"
 "Report-Msgid-Bugs-To: Kenneth Loafman <kenneth@loafman.com>\n"
-"POT-Creation-Date: 2009-07-21 14:53-0700\n"
-"PO-Revision-Date: 2008-12-19 22:51-0500\n"
-"Last-Translator: Michael Terry <mike@mterry.name>\n"
+"POT-Creation-Date: 2009-07-22 17:34-0700\n"
+"PO-Revision-Date: 2009-07-03 14:45+0000\n"
+"Last-Translator: Michael Terry <michael.terry@canonical.com>\n"
 "Language-Team: Ido\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Plural-Forms: nplurals=2; plural=n != 1;\n"
+"X-Launchpad-Export-Date: 2009-07-21 22:24+0000\n"
+"X-Generator: Launchpad (build Unknown)\n"
 
 #: ../duplicity-bin:669
 #, c-format
@@ -380,218 +382,249 @@ msgstr ""
 msgid "Enter 'duplicity --help' for help screen."
 msgstr ""
 
-#: ../duplicity/commandline.py:438
-#, fuzzy, python-format
+#. Used in usage help to represent a Unix-style path name. Example:
+#. rsync://user[:password]@other_host[:port]//absolute_path
+#: ../duplicity/commandline.py:444
+msgid "absolute_path"
+msgstr "absoluta_voyo"
+
+#. Used in usage help. Example:
+#. tahoe://alias/some_dir
+#: ../duplicity/commandline.py:447
+msgid "alias"
+msgstr ""
+
+#. Used in usage help (noun)
+#: ../duplicity/commandline.py:449
+msgid "backup name"
+msgstr ""
+
+#. Used in help to represent a "bucket name" for Amazon Web Services' Simple
+#. Storage Service (S3). Example:
+#. s3://other.host/bucket_name[/prefix]
+#: ../duplicity/commandline.py:453
+msgid "bucket_name"
+msgstr "sitela_nomo"
+
+#. Used in usage help, abbreviation for "character" (noun)
+#: ../duplicity/commandline.py:455
+msgid "char"
+msgstr "litero"
+
+#. Used in usage help (noun)
+#: ../duplicity/commandline.py:457
+msgid "command"
+msgstr "impero"
+
+#. Used in usage help to represent the name of a container in Amazon Web Services'
+#. Cloudfront. Example:
+#. cf+http://container_name
+#: ../duplicity/commandline.py:461
+msgid "container_name"
+msgstr ""
+
+#. Used in usage help (noun)
+#: ../duplicity/commandline.py:463
+msgid "count"
+msgstr "konto"
+
+#. Used in usage help to represent the name of a file directory
+#: ../duplicity/commandline.py:465
+msgid "directory"
+msgstr "dokumentuyo"
+
+#. Used in usage help to represent the name of a file. Example:
+#. --log-file <filename>
+#: ../duplicity/commandline.py:468
+msgid "filename"
+msgstr "dokumentonomo"
+
+#. Used in usage help to represent an ID for a GnuPG key. Example:
+#. --encrypt-key <gpg_key_id>
+#: ../duplicity/commandline.py:471
+msgid "gpg-key-id"
+msgstr ""
+
+#. Used in usage help, e.g. to represent the name of a code module. Example:
+#. rsync://user[:password]@other.host[:port]::/module/some_dir
+#: ../duplicity/commandline.py:474
+msgid "module"
+msgstr "modulo"
+
+#. Used in usage help to represent a desired number of something. Example:
+#. --num-retries <number>
+#: ../duplicity/commandline.py:477
+msgid "number"
+msgstr "nombro"
+
+#. Used in usage help. (Should be consistent with the "Options:" header.)
+#. Example:
+#. duplicity [full|incremental] [options] source_dir target_url
+#: ../duplicity/commandline.py:481
+msgid "options"
+msgstr "selekti"
+
+#. Used in usage help to represent an internet hostname. Example:
+#. ftp://user[:password]@other.host[:port]/some_dir
+#: ../duplicity/commandline.py:484
+msgid "other.host"
+msgstr "altra.hosto"
+
+#. Used in usage help. Example:
+#: ../duplicity/commandline.py:486
+msgid "password"
+msgstr "pasovorto"
+
+#. Used in usage help to represent a Unix-style path name. Example:
+#. --archive-dir <path>
+#: ../duplicity/commandline.py:489
+msgid "path"
+msgstr "voyo"
+
+#. Used in usage help to represent a TCP port number. Example:
+#. ftp://user[:password]@other.host[:port]/some_dir
+#: ../duplicity/commandline.py:492
+msgid "port"
+msgstr "sabordo"
+
+#. Used in usage help. This represents a string to be used as a prefix to
+#. names for backup files created by Duplicity. Example:
+#. s3://other.host/bucket_name[/prefix]
+#: ../duplicity/commandline.py:496
+msgid "prefix"
+msgstr "prefixo"
+
+#. Used in usage help to represent a Unix-style path name. Example:
+#. rsync://user[:password]@other.host[:port]/relative_path
+#: ../duplicity/commandline.py:499
+msgid "relative_path"
+msgstr "relatanta_voyo"
+
+#. Used in usage help. Example:
+#. --timeout <seconds>
+#: ../duplicity/commandline.py:502
+msgid "seconds"
+msgstr "sekundi"
+
+#. Used in usage help to represent a "glob" style pattern for matching one or
+#. more files, as described in the documentation. Example:
+#. --exclude <%shell_pattern>
+#: ../duplicity/commandline.py:506
+msgid "shell_pattern"
+msgstr ""
+
+#. Used in usage help to represent the name of a single file directory or a
+#. Unix-style path to a directory. Example:
+#. file:///%(x_some_dir)s
+#: ../duplicity/commandline.py:510
+msgid "some_dir"
+msgstr "ula_dokumentuyo"
+
+#. Used in usage help to represent the name of a single file directory or a
+#. Unix-style path to a directory where files will be coming FROM. Example:
+#. duplicity [full|incremental] [options] source_dir target_url
+#: ../duplicity/commandline.py:514
+msgid "source_dir"
+msgstr "fonta_dokumentuyo"
+
+#. Used in usage help to represent a URL files will be coming FROM. Example:
+#. duplicity [restore] [options] source_url target_dir
+#: ../duplicity/commandline.py:517
+msgid "source_url"
+msgstr "fonta_url"
+
+#. Used in usage help to represent the name of a single file directory or a
+#. Unix-style path to a directory. where files will be going TO. Example:
+#. duplicity [restore] [options] source_url target_dir
+#: ../duplicity/commandline.py:521
+msgid "target_dir"
+msgstr "skopa_dokumentuyo"
+
+#. Used in usage help to represent a URL files will be going TO. Example:
+#. duplicity [full|incremental] [options] source_dir target_url
+#: ../duplicity/commandline.py:524
+msgid "target_url"
+msgstr "skopa_url"
+
+#. Used in usage help to represent a time spec for a previous point in time,
+#. as described in the documentation. Example:
+#. duplicity remove-older-than time [options] target_url
+#: ../duplicity/commandline.py:528
+msgid "time"
+msgstr "tempo"
+
+#. Used in usage help to represent a user name (i.e. login). Example:
+#. ftp://user[:password]@other.host[:port]/some_dir
+#: ../duplicity/commandline.py:531
+msgid "user"
+msgstr "uzero"
+
+#: ../duplicity/commandline.py:533
+#, python-format
+msgid "duplicity version %s running on %s."
+msgstr "duplicity versiono %s kuras sur %s."
+
+#. Header in usage help
+#: ../duplicity/commandline.py:537
+msgid "Usage:"
+msgstr "Uzado:"
+
+#. Header in usage help
+#: ../duplicity/commandline.py:550
+msgid "Backends and their URL formats:"
+msgstr ""
+
+#. Header in usage help
+#: ../duplicity/commandline.py:570
+msgid "Commands:"
+msgstr "Imperi:"
+
+#. Header in usage help
+#: ../duplicity/commandline.py:584
+msgid "Options:"
+msgstr "Selekti:"
+
+#. In this portion of the usage instructions, "[ewnid]" indicates which
+#. characters are permitted (e, w, n, i, or d); the brackets imply their own
+#. meaning in regex; i.e., only one of the characters is allowed in an instance.
+#: ../duplicity/commandline.py:638
 msgid ""
-"\n"
-"duplicity version %s running on %s.\n"
-"Usage:\n"
-"    duplicity [full|incremental] [options] source_dir target_url\n"
-"    duplicity [restore] [options] source_url target_dir\n"
-"    duplicity verify [options] source_url target_dir\n"
-"    duplicity collection-status [options] target_url\n"
-"    duplicity list-current-files [options] target_url\n"
-"    duplicity cleanup [options] target_url\n"
-"    duplicity remove-older-than time [options] target_url\n"
-"    duplicity remove-all-but-n-full count [options] target_url\n"
-"\n"
-"Backends and their URL formats:\n"
-"    cf+http://container_name\n"
-"    file:///some_dir\n"
-"    ftp://user[:password]@other.host[:port]/some_dir\n"
-"    hsi://user[:password]@other.host[:port]/some_dir\n"
-"    imap://user[:password]@other.host[:port]/some_dir\n"
-"    rsync://user[:password]@other.host[:port]::/module/some_dir\n"
-"    rsync://user[:password]@other.host[:port]/relative_path\n"
-"    rsync://user[:password]@other.host[:port]//absolute_path\n"
-"    s3://other.host/bucket_name[/prefix]\n"
-"    s3+http://bucket_name[/prefix]\n"
-"    scp://user[:password]@other.host[:port]/some_dir\n"
-"    ssh://user[:password]@other.host[:port]/some_dir\n"
-"    tahoe://alias/directory\n"
-"    webdav://user[:password]@other.host/some_dir\n"
-"    webdavs://user[:password]@other.host/some_dir\n"
-"\n"
-"Commands:\n"
-"    cleanup <target_url>\n"
-"    collection-status <target_url>\n"
-"    full <source_dir> <target_url>\n"
-"    incr <source_dir> <target_url>\n"
-"    list-current-files <target_url>\n"
-"    restore <target_url> <source_dir>\n"
-"    remove-older-than <time> <target_url>\n"
-"    remove-all-but-n-full <count> <target_url>\n"
-"    verify <target_url> <source_dir>\n"
-"\n"
-"Options:\n"
-"    --allow-source-mismatch\n"
-"    --archive-dir <path>\n"
-"    --asynchronous-upload\n"
-"    --dry-run\n"
-"    --encrypt-key <gpg-key-id>\n"
-"    --exclude <shell_pattern>\n"
-"    --exclude-device-files\n"
-"    --exclude-filelist <filename>\n"
-"    --exclude-filelist-stdin\n"
-"    --exclude-globbing-filelist <filename>\n"
-"    --exclude-other-filesystems\n"
-"    --exclude-regexp <regexp>\n"
-"    --file-to-restore <path>\n"
-"    --full-if-older-than <time>\n"
-"    --force\n"
-"    --ftp-passive\n"
-"    --ftp-regular\n"
-"    --gio\n"
-"    --gpg-options\n"
-"    --include <shell_pattern>\n"
-"    --include-filelist <filename>\n"
-"    --include-filelist-stdin\n"
-"    --include-globbing-filelist <filename>\n"
-"    --include-regexp <regexp>\n"
-"    --log-fd <fd>\n"
-"    --log-file <filename>\n"
-"    --name <backup name>\n"
-"    --no-encryption\n"
-"    --no-print-statistics\n"
-"    --null-separator\n"
-"    --num-retries <number>\n"
-"    --old-filenames\n"
-"    --s3-european-buckets\n"
-"    --s3-use-new-style\n"
-"    --scp-command <command>\n"
-"    --sftp-command <command>\n"
-"    --sign-key <gpg-key-id>\n"
-"    --ssh-askpass\n"
-"    --ssh-options\n"
-"    --short-filenames\n"
-"    --tempdir <directory>\n"
-"    --timeout <seconds>\n"
-"    -t<time>, --time <time>, --restore-time <time>\n"
-"    --time-separator <char>\n"
-"    --use-agent\n"
-"    --version\n"
-"    --volsize <number>\n"
-"    -v[0-9], --verbosity [0-9]\n"
 "    Verbosity must be one of: digit [0-9], character [ewnid],\n"
 "    or word ['error', 'warning', 'notice', 'info', 'debug'].\n"
 "    The default is 4 (Notice).  It is strongly recommended\n"
 "    that verbosity level is set at 2 (Warning) or higher.\n"
 msgstr ""
-"\n"
-"duplicity versiono %s kuras sur %s.\n"
-"Uzado:\n"
-"    duplicity [full|incremental] [selekti] fonta_dokumentuyo skopa_url\n"
-"    duplicity [restore] [selekti] fonta_url skopa_dokumentuyo\n"
-"    duplicity verify [selekti] fonta_url skopa_dokumentuyo\n"
-"    duplicity collection-status [selekti] skopa_url\n"
-"    duplicity list-current-files [selekti] skopa_url\n"
-"    duplicity cleanup [selekti] skopa_url\n"
-"    duplicity remove-older-than time [selekti] skopa_url\n"
-"    duplicity remove-all-but-n-full count [selekti] skopa_url\n"
-"\n"
-"Backends and their URL formats:\n"
-"    ssh://uzero[:pasovorto]@altra.hosto[:sabordo]/ula_dokumentuyo\n"
-"    scp://uzero[:pasovorto]@altra.hosto[:sabordo]/ula_dokumentuyo\n"
-"    ftp://uzero[:pasovorto]@altra.hosto[:sabordo]/ula_dokumentuyo\n"
-"    hsi://uzero[:pasovorto]@altra.hosto[:sabordo]/ula_dokumentuyo\n"
-"    file:///ula_dokumentuyo\n"
-"    gmail://uzero[:pasovortod]@altra.hosto[:sabordo]/ula_dokumentuyo\n"
-"    rsync://uzero[:pasovorto]@altra.hosto[:sabordo]::/modulo/"
-"ula_dokumentuyo\n"
-"    rsync://uzero[:pasovorto]@altra.hosto[:sabordo]/relatanta_voyo\n"
-"    rsync://uzero[:pasovorto]@altra.hosto[:sabordo]//absoluta_voyo\n"
-"    s3://altra.hosto/sitela_nomo[/prefixo]\n"
-"    s3+http://sitela_nomo[/prefixo]\n"
-"    webdav://uzero[:pasovorto]@altra.hosto/ula_dokumentuyo\n"
-"    webdavs://uzero[:pasovorto]@altra.hosto/ula_dokumentuyo\n"
-"\n"
-"Imperi:\n"
-"    cleanup <skopa_url>\n"
-"    collection-status <skopa_url>\n"
-"    full <fonta_dokumentuyo> <skopa_url>\n"
-"    incr <fonta_dokumentuyo> <skopa_url>\n"
-"    list-current-files <skopa_url>\n"
-"    restore <skopa_url> <fonta_dokumentuyo>\n"
-"    remove-older-than <tempo> <skopa_url>\n"
-"    remove-all-but-n-full <konto> <skopa_url>\n"
-"    verify <skopa_url> <fonta_dokumentuyo>\n"
-"\n"
-"Selekti:\n"
-"    --allow-source-mismatch\n"
-"    --archive-dir <voyo>\n"
-"    --asynchronous-upload\n"
-"    --dry-run\n"
-"    --encrypt-key <gpg-key-id>\n"
-"    --exclude <shell_pattern>\n"
-"    --exclude-device-files\n"
-"    --exclude-filelist <dokumentonomo>\n"
-"    --exclude-filelist-stdin\n"
-"    --exclude-globbing-filelist <dokumentonomo>\n"
-"    --exclude-other-filesystems\n"
-"    --exclude-regexp <regexp>\n"
-"    --file-to-restore <voyo>\n"
-"    --full-if-older-than <tempo>\n"
-"    --force\n"
-"    --ftp-passive\n"
-"    --ftp-regular\n"
-"    --gpg-options\n"
-"    --include <shell_pattern>\n"
-"    --include-filelist <dokumentonomo>\n"
-"    --include-filelist-stdin\n"
-"    --include-globbing-filelist <dokumentonomo>\n"
-"    --include-regexp <regexp>\n"
-"    --log-fd <fd>\n"
-"    --log-file <dokumentonomo>\n"
-"    --no-encryption\n"
-"    --no-print-statistics\n"
-"    --null-separator\n"
-"    --num-retries <nombro>\n"
-"    --s3-european-buckets\n"
-"    --s3-use-new-style\n"
-"    --scp-command <impero>\n"
-"    --sftp-command <impero>\n"
-"    --sign-key <gpg-key-id>\n"
-"    --ssh-askpass\n"
-"    --ssh-options\n"
-"    --short-filenames\n"
-"    --tempdir <dokumentuyo>\n"
-"    --timeout <sekundi>\n"
-"    -t<tempo>, --restore-time <tempo>\n"
-"    --time-separator <litero>\n"
-"    --version\n"
-"    --volsize <nombro>\n"
-"    -v[0-9], --verbosity [0-9]\n"
 
-#: ../duplicity/commandline.py:551
+#: ../duplicity/commandline.py:664
 #, python-format
 msgid "Specified archive directory '%s' does not exist, or is not a directory"
 msgstr ""
 
-#: ../duplicity/commandline.py:560
+#: ../duplicity/commandline.py:673
 #, python-format
 msgid ""
 "Sign key should be an 8 character hex string, like 'AA0E73D2'.\n"
 "Received '%s' instead."
 msgstr ""
 
-#: ../duplicity/commandline.py:618
+#: ../duplicity/commandline.py:731
 #, python-format
 msgid ""
 "Restore destination directory %s already exists.\n"
 "Will not overwrite."
 msgstr ""
 
-#: ../duplicity/commandline.py:623
+#: ../duplicity/commandline.py:736
 #, python-format
 msgid "Verify directory %s does not exist"
 msgstr ""
 
-#: ../duplicity/commandline.py:629
+#: ../duplicity/commandline.py:742
 #, python-format
 msgid "Backup source directory %s does not exist."
 msgstr ""
 
-#: ../duplicity/commandline.py:704
+#: ../duplicity/commandline.py:817
 #, python-format
 msgid ""
 "Bad URL '%s'.\n"
@@ -599,7 +632,7 @@ msgid ""
 "\"file:///usr/local\".  See the man page for more information."
 msgstr ""
 
-#: ../duplicity/commandline.py:729
+#: ../duplicity/commandline.py:842
 msgid "Main action: "
 msgstr ""
 
