--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,4 @@
-New in v0.6.03 (2009/07/??)
+New in v0.6.03 (2009/07/29)
 ---------------------------
 Lots of small changes and some bug fixes.  Restart error handling has
 been smoothed out a great deal and it "does what is right" in order to
@@ -11,6 +11,8 @@ translations and internationalization.  Thanks to everyone!
 398230  Deja-dup backup fails with message: "Unable to locate last file"
 401303  0.6.2 manpage inconsistent wrt. archive-dir/name
 405646  Small i18n error
+405975  duplicity.gpg.gpg_failed() breaks and spews on GnuPG error
+402794  duplicity public-key-only incompatible with gnupg 2.0.11
 
 
 New in v0.6.02 (2009/07/07)
