--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,11 +1,14 @@
 New in v0.6.03 (2009/07/29)
 ---------------------------
-Lots of small changes and some bug fixes.  Restart error handling has
-been smoothed out a great deal and it "does what is right" in order to
-keep going.  Backends are now optional, if they fail an Info message
-is put out to notify of the failure and why.  There was more work on
-translations and internationalization.  Thanks to everyone!
+Lots of small changes and some bug fixes.
+* Restart error handling has been smoothed out a great deal and it
+  "does what is right" in order to keep going.
+* Backends are now optional, if they fail an Info message is put out
+  to notify of the failure and why.
+* There was more work on translations and internationalization.
+Thanks to everyone!
 
+Bugs fixed this release:
 377528  --file-to-restore doesn't work with trailing slash
 394757  Backend imports should be made optional
 398230  Deja-dup backup fails with message: "Unable to locate last file"
