--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,9 @@
+New in v0.6.05 (2009/08/??)
+---------------------------
+Bugs fixed this release:
+409593  deja-dup (or duplicity) deletes all signatures
+
+
 New in v0.6.04 (2009/08/01)
 ---------------------------
 One major and one minor change.  The "No such file or directory" error
