--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,6 +2,8 @@ New in v0.6.05 (2009/08/??)
 ---------------------------
 Bugs fixed this release:
 409593  deja-dup (or duplicity) deletes all signatures
+408059  Failure due to _logger.log failure for content with special
+        characters: TypeError decoding Unicode not supported
 
 
 New in v0.6.04 (2009/08/01)
